News UAT/force-app/main/default/objects/Case/fields/Date_Incorporated__c.field-meta.xml
<CustomField>
    <fullName>Date_Incorporated__c</fullName>
    <description>Account&#39;s Incorporation Date</description>
    <inlineHelpText>Account&#39;s Incorporation Date</inlineHelpText>
    <label>Date Incorporated</label>
    <type>Date</type>
</CustomField>