News UAT/force-app/main/default/objects/Case/fields/Date_Time_Due__c.field-meta.xml
<CustomField>
    <fullName>Date_Time_Due__c</fullName>
    <description>Case Due Date &amp; Time</description>
    <inlineHelpText>Case Due Date &amp; Time</inlineHelpText>
    <label>Date/Time Due</label>
    <type>DateTime</type>
</CustomField>