News UAT/force-app/main/default/objects/Case/fields/DateTimeOpened__c.field-meta.xml
<CustomField>
    <fullName>DateTimeOpened__c</fullName>
    <formula>CreatedDate</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>DateTimeOpened</label>
    <type>DateTime</type>
</CustomField>