News UAT/force-app/main/default/objects/Case/fields/Demographics__c.field-meta.xml
<CustomField>
    <fullName>Demographics__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Demographics</label>
    <type>Checkbox</type>
</CustomField>