News UAT/force-app/main/default/objects/Case/fields/Description_Summary__c.field-meta.xml
<CustomField>
    <fullName>Description_Summary__c</fullName>
    <description>Description Summary for Lists</description>
    <label>Description Summary</label>
    <length>100</length>
    <type>Text</type>
</CustomField>