News UAT/force-app/main/default/objects/Case/fields/Desired_Outcome__c.field-meta.xml
<CustomField>
    <fullName>Desired_Outcome__c</fullName>
    <description>Client analysis: desired outcome</description>
    <inlineHelpText>What do you/they want to achieve with media/this campaign?</inlineHelpText>
    <label>Desired Outcome</label>
    <type>TextArea</type>
</CustomField>