News UAT/force-app/main/default/objects/Case/fields/Developer_Complete_Date__c.field-meta.xml
<CustomField>
    <fullName>Developer_Complete_Date__c</fullName>
    <description>Stamped when Status set to &#39;Ready for testing&#39;</description>
    <label>Developer Complete Date</label>
    <type>DateTime</type>
</CustomField>