News UAT/force-app/main/default/objects/Case/fields/Digital_Breakdown__c.field-meta.xml
<CustomField>
    <fullName>Digital_Breakdown__c</fullName>
    <description>Breakdown of budget for Digital in dollars</description>
    <inlineHelpText>Breakdown of budget for Digital in dollars</inlineHelpText>
    <label>Digital Breakdown</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>