News UAT/force-app/main/default/objects/Case/fields/DRS__c.field-meta.xml
<CustomField>
    <fullName>DRS__c</fullName>
    <defaultValue>false</defaultValue>
    <description>DRS Checkbox for Complaint/DRS</description>
    <label>DRS</label>
    <type>Checkbox</type>
</CustomField>