News UAT/force-app/main/default/objects/Case/fields/DRS_Number__c.field-meta.xml
<CustomField>
    <fullName>DRS_Number__c</fullName>
    <label>DRS Number</label>
    <length>50</length>
    <type>Text</type>
</CustomField>