News UAT/force-app/main/default/objects/Case/fields/DRS_Reason__c.field-meta.xml
<CustomField>
    <fullName>DRS_Reason__c</fullName>
    <description>DRS Reason</description>
    <inlineHelpText>DRS Reason</inlineHelpText>
    <label>DRS Reason</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Data Entry - Ad Cancelled but still appeared</fullName>
            </value>
            <value>
                <fullName>Data Entry - Ad did not appear</fullName>
            </value>
            <value>
                <fullName>Data Entry - Liner Contents Error</fullName>
            </value>
            <value>
                <fullName>Data Entry - Contract Rate Adjustment</fullName>
            </value>
            <value>
                <fullName>Data Entry - Double booked</fullName>
            </value>
            <value>
                <fullName>Data Entry - Not Authorised</fullName>
            </value>
            <value>
                <fullName>Data Entry - Pricing Error - Over/Undercharged</fullName>
            </value>
            <value>
                <fullName>Data Entry - Incorrect Publish Date</fullName>
            </value>
            <value>
                <fullName>Data Entry - Display Advertising Copy Error</fullName>
            </value>
            <value>
                <fullName>Data Entry - Incorrect Publication</fullName>
            </value>
            <value>
                <fullName>Data Entry - Incorrect Section or Placement</fullName>
            </value>
            <value>
                <fullName>Premedia - Ad Cancelled but still appeared</fullName>
            </value>
            <value>
                <fullName>Premedia - Ad did not appear</fullName>
            </value>
            <value>
                <fullName>Premedia - Display Advertising Copy Error</fullName>
            </value>
            <value>
                <fullName>Premedia - Incorrect Section or Placement</fullName>
            </value>
            <value>
                <fullName>Print Site - Unacceptable Print Quality</fullName>
            </value>
            <value>
                <fullName>Print Site - Distribution or Insert issue</fullName>
            </value>
            <value>
                <fullName>Sales - Ad Cancelled but still appeared</fullName>
            </value>
            <value>
                <fullName>Sales - Ad did not appear</fullName>
            </value>
            <value>
                <fullName>Sales - Liner Contents Error</fullName>
            </value>
            <value>
                <fullName>Sales - Contract Rate Adjustment</fullName>
            </value>
            <value>
                <fullName>Sales - Double Booked</fullName>
            </value>
            <value>
                <fullName>Sales - Not Authorised</fullName>
            </value>
            <value>
                <fullName>Sales - Pricing Error - Over/Undercharged</fullName>
            </value>
            <value>
                <fullName>Sales - Incorrect Publish date</fullName>
            </value>
            <value>
                <fullName>Sales - Display Advertising Copy Error</fullName>
            </value>
            <value>
                <fullName>Sales - Incorrect Publication</fullName>
            </value>
            <value>
                <fullName>Sales - Incorrect Section or Placement</fullName>
            </value>
            <value>
                <fullName>Sales - Distribution or Insert issue</fullName>
            </value>
            <value>
                <fullName>Sales - Goodwill</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>