News UAT/force-app/main/default/objects/Case/fields/DSP_Partner__c.field-meta.xml
<CustomField>
    <fullName>DSP_Partner__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Direct Sales Partner for Proposal</description>
    <inlineHelpText>Your Direct Sales Partner/Account Executive</inlineHelpText>
    <label>DSP Partner</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Cases</relationshipName>
    <type>Lookup</type>
</CustomField>