News UAT/force-app/main/default/objects/Case/fields/DSP_Phone__c.field-meta.xml
<CustomField>
    <fullName>DSP_Phone__c</fullName>
    <formula>DSP_Partner__r.Phone</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>DSP Phone</label>
    <type>Text</type>
</CustomField>