News UAT/force-app/main/default/objects/Case/fields/Edit_Case_Link__c.field-meta.xml
<CustomField>
    <fullName>Edit_Case_Link__c</fullName>
    <formula>HYPERLINK(&quot;javascript:if(typeof(srcUp)==&#39;function&#39;) {srcUp(&#39;/&quot; + Id + &quot;/e?retURL=%2&quot; + Id + &quot;&#39;); } else {window.location.assign(&#39;/&quot; + Id + &quot;/e?retURL=%2&quot; + Id + &quot;&#39;) }&quot;, &quot;Edit Case&quot;)</formula>
    <label>Edit Case Link</label>
    <type>Text</type>
</CustomField>