News UAT/force-app/main/default/objects/Case/fields/Email_Mailbox__c.field-meta.xml
<CustomField>
    <fullName>Email_Mailbox__c</fullName>
    <label>Email Mailbox</label>
    <length>255</length>
    <type>Text</type>
</CustomField>