News UAT/force-app/main/default/objects/Case/fields/Error_Date__c.field-meta.xml
<CustomField>
    <fullName>Error_Date__c</fullName>
    <description>Error Date for Complaint/DRS Case</description>
    <label>Error Date</label>
    <type>Date</type>
</CustomField>