News UAT/force-app/main/default/objects/Case/fields/Error_Made_By__c.field-meta.xml
<CustomField>
    <fullName>Error_Made_By__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Error Made By (User) for Complaint/DRS</description>
    <label>Error Made By</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Cases1</relationshipName>
    <type>Lookup</type>
</CustomField>