News UAT/force-app/main/default/objects/Case/fields/Error_Made_By_Email__c.field-meta.xml
<CustomField>
    <fullName>Error_Made_By_Email__c</fullName>
    <description>Error Made By User Email on Complaint/DRS</description>
    <label>Error Made By Email</label>
    <type>Email</type>
</CustomField>