News UAT/force-app/main/default/objects/Case/fields/Error_Made_By_Phone__c.field-meta.xml
<CustomField>
    <fullName>Error_Made_By_Phone__c</fullName>
    <description>Error Made By User Phone Number for Complaint/DRS</description>
    <formula>Error_Made_By__r.Phone</formula>
    <label>Error Made By Phone</label>
    <type>Text</type>
</CustomField>