News UAT/force-app/main/default/objects/Case/fields/Estimated_Total_Monthly_Spend__c.field-meta.xml
<CustomField>
    <fullName>Estimated_Total_Monthly_Spend__c</fullName>
    <description>Estimated total monthly spend across all News Limited Divisions</description>
    <inlineHelpText>Estimated total monthly spend across all News Limited Divisions</inlineHelpText>
    <label>Estimated Total Monthly Spend</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>