News UAT/force-app/main/default/objects/Case/fields/Ex_GST__c.field-meta.xml
<CustomField>
    <fullName>Ex_GST__c</fullName>
    <formula>Amount__c   / 1.1</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Credit Amount Ex GST</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>