News UAT/force-app/main/default/objects/Case/fields/Find_Out_More_About_Our_Audiences__c.field-meta.xml
<CustomField>
    <fullName>Find_Out_More_About_Our_Audiences__c</fullName>
    <formula>HYPERLINK(&quot;http://peopleatnews/BusinessTools/AdSales/Audiences/Heroes/Pages/HeroesDefault.aspx&quot;, &quot;Our Audiences&quot;)</formula>
    <label>Find Out More About Our Audiences</label>
    <type>Text</type>
</CustomField>