News UAT/force-app/main/default/objects/Case/fields/GC_Test__c.field-meta.xml
<CustomField>
    <fullName>GC_Test__c</fullName>
    <description>This field will be deleted after testing.</description>
    <formula>Booking__r.Total_Cost_Cyber__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>GC Test</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>