News UAT/force-app/main/default/objects/Case/fields/Genesys_Case_Type__c.field-meta.xml
<CustomField>
    <fullName>Genesys_Case_Type__c</fullName>
    <formula>IF(Apex_Count_Incoming_Emails__c &gt;=2 , &#39;REPLY&#39;, IF(Apex_Count_Incoming_Emails__c =1, &#39;NEW&#39;, &#39;N/A&#39;))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Genesys Case Type</label>
    <type>Text</type>
</CustomField>