News UAT/force-app/main/default/objects/Case/fields/has_Inbound_Email__c.field-meta.xml
<CustomField>
    <fullName>has_Inbound_Email__c</fullName>
    <defaultValue>false</defaultValue>
    <description>This is a flag to indicate that if there is an inbound email for this case.</description>
    <label>Inbound Email</label>
    <type>Checkbox</type>
</CustomField>