News UAT/force-app/main/default/objects/Case/fields/Has_RFP_Case__c.field-meta.xml
<CustomField>
    <fullName>Has_RFP_Case__c</fullName>
    <formula>RecordType.Name = &#39;RFP&#39;</formula>
    <label>Has RFP Case?</label>
    <type>Checkbox</type>
</CustomField>