News UAT/force-app/main/default/objects/Case/fields/Headline__c.field-meta.xml
<CustomField>
    <fullName>Headline__c</fullName>
    <description>Headline</description>
    <inlineHelpText>Creative content Headline</inlineHelpText>
    <label>Headline</label>
    <length>100</length>
    <type>Text</type>
</CustomField>