News UAT/force-app/main/default/objects/Case/fields/How_will_you_present_this__c.field-meta.xml
<CustomField>
    <fullName>How_will_you_present_this__c</fullName>
    <inlineHelpText>Select as many different options as required as to how you will present the solution</inlineHelpText>
    <label>How will you present this?</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Slides</fullName>
            </value>
            <value>
                <fullName>Mood Board</fullName>
            </value>
            <value>
                <fullName>Face to Face</fullName>
            </value>
            <value>
                <fullName>Email</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>