News UAT/force-app/main/default/objects/Case/fields/Images_Logos__c.field-meta.xml
<CustomField>
    <fullName>Images_Logos__c</fullName>
    <description>Images &amp; Logos</description>
    <label>Images &amp; Logos</label>
    <length>200</length>
    <type>Text</type>
</CustomField>