News UAT/force-app/main/default/objects/Case/fields/Impressions__c.field-meta.xml
<CustomField>
    <fullName>Impressions__c</fullName>
    <description>Impressions for News Australia products discussed</description>
    <inlineHelpText>Impressions for News Australia products discussed?</inlineHelpText>
    <label>Impressions</label>
    <length>100</length>
    <type>Text</type>
</CustomField>