News UAT/force-app/main/default/objects/Case/fields/Industry__c.field-meta.xml
<CustomField>
    <fullName>Industry__c</fullName>
    <description>Account&#39;s Industry, but drawn from Opportunity</description>
    <formula>Opportunity__r.Industry_Code__r.Name</formula>
    <label>Industry</label>
    <type>Text</type>
</CustomField>