News UAT/force-app/main/default/objects/Case/fields/Information_on_Existing_Spend_Required__c.field-meta.xml
<CustomField>
    <fullName>Information_on_Existing_Spend_Required__c</fullName>
    <defaultValue>false</defaultValue>
    <description>If an existing client is information on existing spend by product required?</description>
    <inlineHelpText>If an existing client is information on existing spend by product required?</inlineHelpText>
    <label>Information on Existing Spend Required?</label>
    <type>Checkbox</type>
</CustomField>