News UAT/force-app/main/default/objects/Case/fields/Insights_Additional_Information__c.field-meta.xml
<CustomField>
    <fullName>Insights_Additional_Information__c</fullName>
    <description>Insights Additional Information</description>
    <inlineHelpText>How much detail do you require from the insights team</inlineHelpText>
    <label>Level of insights required</label>
    <length>1500</length>
    <type>LongTextArea</type>
</CustomField>