News UAT/force-app/main/default/objects/Case/fields/Insights_Required__c.field-meta.xml
<CustomField>
    <fullName>Insights_Required__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Insights required?</description>
    <inlineHelpText>Insights required?</inlineHelpText>
    <label>Insights Required?</label>
    <type>Checkbox</type>
</CustomField>