News UAT/force-app/main/default/objects/Case/fields/Integration_Error__c.field-meta.xml
<CustomField>
    <fullName>Integration_Error__c</fullName>
    <description>Set by webMethods if there is a problem processing a Outbound Message for a Case</description>
    <inlineHelpText>Populated by webMethods in the event of an issue processing an Outbound Message for a Case. For instance, when pushing an Email to Genesys for routing.</inlineHelpText>
    <label>Integration Error</label>
    <length>255</length>
    <type>Text</type>
</CustomField>