News UAT/force-app/main/default/objects/Case/fields/Inventory_Availability__c.field-meta.xml
<CustomField>
    <fullName>Inventory_Availability__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Inventory availability checked and included</description>
    <inlineHelpText>Do you want inventory availability checked and included?</inlineHelpText>
    <label>Inventory Availability?</label>
    <type>Checkbox</type>
</CustomField>