News UAT/force-app/main/default/objects/Case/fields/Inventory_Details__c.field-meta.xml
<CustomField>
    <fullName>Inventory_Details__c</fullName>
    <description>Inventory Availability Details</description>
    <inlineHelpText>Details for inventory availability</inlineHelpText>
    <label>Inventory Details</label>
    <length>100</length>
    <type>Text</type>
</CustomField>