News UAT/force-app/main/default/objects/Case/fields/Invoiced_Charges__c.field-meta.xml
<CustomField>
    <fullName>Invoiced_Charges__c</fullName>
    <description>Invoiced Charges for Complaint/DRS</description>
    <label>Invoiced Charges</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>