News UAT/force-app/main/default/objects/Case/fields/Is_Customer_on_an_Agreement__c.field-meta.xml
<CustomField>
    <fullName>Is_Customer_on_an_Agreement__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Is the Customer on an Agreement with News Ltd</description>
    <inlineHelpText>Yes - Specify the rates
No - Specify if there is a discount level in mind that has been approved by a Manager</inlineHelpText>
    <label>Is Customer on an Agreement?</label>
    <type>Checkbox</type>
</CustomField>