News UAT/force-app/main/default/objects/Case/fields/JDE_Account_Number__c.field-meta.xml
<CustomField>
    <fullName>JDE_Account_Number__c</fullName>
    <description>Sales Order Booking System Account JDE Account Number</description>
    <formula>Sales_Order__r.External_Account__r.JDE_Account_Number__c</formula>
    <inlineHelpText>Sales Order Booking System Account JDE Account Number</inlineHelpText>
    <label>JDE Account Number</label>
    <type>Text</type>
</CustomField>