News UAT/force-app/main/default/objects/Case/fields/Lead_Comments__c.field-meta.xml
<CustomField>
    <fullName>Lead_Comments__c</fullName>
    <label>Lead Comments</label>
    <type>TextArea</type>
</CustomField>