News UAT/force-app/main/default/objects/Case/fields/Lead_Phone__c.field-meta.xml
<CustomField>
    <fullName>Lead_Phone__c</fullName>
    <label>Lead Phone</label>
    <type>Phone</type>
</CustomField>