News UAT/force-app/main/default/objects/Case/fields/Local_Breakdown__c.field-meta.xml
<CustomField>
    <fullName>Local_Breakdown__c</fullName>
    <description>Local Breakdown of Campaign Budget</description>
    <inlineHelpText>Budget breakdown for Local in dollars</inlineHelpText>
    <label>Local Breakdown</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>