News UAT/force-app/main/default/objects/Case/fields/Managed_Non_Managed__c.field-meta.xml
<CustomField>
    <fullName>Managed_Non_Managed__c</fullName>
    <formula>TEXT(Account.Type)</formula>
    <label>Managed/Non-Managed</label>
    <type>Text</type>
</CustomField>