News UAT/force-app/main/default/objects/Case/fields/Marketing_Objective_Problem__c.field-meta.xml
<CustomField>
    <fullName>Marketing_Objective_Problem__c</fullName>
    <description>Client analysis marketing objective/problem</description>
    <inlineHelpText>Relating to the customers’ business – reason they need media. (e.g. declining sales, losing customers, growing competitors, negative perception, or a new product launch etc)</inlineHelpText>
    <label>Business Problem</label>
    <length>10000</length>
    <type>LongTextArea</type>
</CustomField>