News UAT/force-app/main/default/objects/Case/fields/Media_Behaviours__c.field-meta.xml
<CustomField>
    <fullName>Media_Behaviours__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Media Behaviours</label>
    <type>Checkbox</type>
</CustomField>