News UAT/force-app/main/default/objects/Case/fields/Metro_Breakdown__c.field-meta.xml
<CustomField>
    <fullName>Metro_Breakdown__c</fullName>
    <description>Metro Breakdown</description>
    <inlineHelpText>Breakdown of Budget for Metro in dollars</inlineHelpText>
    <label>Metro Breakdown</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>