News UAT/force-app/main/default/objects/Case/fields/Mock_Up_Required__c.field-meta.xml
<CustomField>
    <fullName>Mock_Up_Required__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Mock Up</description>
    <inlineHelpText>Please tick if you have already requested a mock up with Premedia&#39;s Creative Services Team</inlineHelpText>
    <label>Has a Mock Up been requested</label>
    <type>Checkbox</type>
</CustomField>