News UAT/force-app/main/default/objects/Case/fields/NEWS_Australia_Budget__c.field-meta.xml
<CustomField>
    <fullName>NEWS_Australia_Budget__c</fullName>
    <description>NEWS Australia Budget</description>
    <inlineHelpText>NEWS Australia Budget allocation</inlineHelpText>
    <label>NEWS Australia Budget</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>