News UAT/force-app/main/default/objects/Case/fields/NEWS_Product_discussed__c.field-meta.xml
<CustomField>
    <fullName>NEWS_Product_discussed__c</fullName>
    <description>Were any News Australia products discussed?</description>
    <inlineHelpText>Were any News Australia products discussed?</inlineHelpText>
    <label>NEWS Product/s discussed</label>
    <length>100</length>
    <type>Text</type>
</CustomField>