News UAT/force-app/main/default/objects/Case/fields/NMBS_Number__c.field-meta.xml
<CustomField>
    <fullName>NMBS_Number__c</fullName>
    <description>NMBS Number for Complaint/DRS Case</description>
    <label>NMBS Number</label>
    <length>200</length>
    <type>Text</type>
</CustomField>