News UAT/force-app/main/default/objects/Case/fields/NVMContactWorld__EmailSentTo__c.field-meta.xml
<CustomField>
    <fullName>NVMContactWorld__EmailSentTo__c</fullName>
    <label>EmailSentTo</label>
    <length>255</length>
    <type>Text</type>
</CustomField>