News UAT/force-app/main/default/objects/Case/fields/NVMContactWorld__NVMAccountOverride__c.field-meta.xml
<CustomField>
    <fullName>NVMContactWorld__NVMAccountOverride__c</fullName>
    <label>NVMAccountOverride</label>
    <length>255</length>
    <type>Text</type>
</CustomField>