News UAT/force-app/main/default/objects/Case/fields/NVMContactWorld__NVMCaseOrigin__c.field-meta.xml
<CustomField>
    <fullName>NVMContactWorld__NVMCaseOrigin__c</fullName>
    <description>The content of this field is presented on the contact pad when a case is assigned to an agent. For example: Email</description>
    <inlineHelpText>The content of this field is presented on the contact pad when a case is assigned to an agent. For example: Email</inlineHelpText>
    <label>NVM Case Origin</label>
    <length>50</length>
    <type>Text</type>
</CustomField>