News UAT/force-app/main/default/objects/Case/fields/Open_to_Other_Product__c.field-meta.xml
<CustomField>
    <fullName>Open_to_Other_Product__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Is the Client Open to Other Product Suggestions Relevant to their Target Audience?</description>
    <inlineHelpText>Is the Client Open to Other Product Suggestions Relevant to their Target Audience? If Yes, please provide other Product details below.</inlineHelpText>
    <label>Open to Other Product Suggestions</label>
    <type>Checkbox</type>
</CustomField>