News UAT/force-app/main/default/objects/Case/fields/Opportunity_StageName__c.field-meta.xml
<CustomField>
    <fullName>Opportunity_StageName__c</fullName>
    <formula>TEXT(Opportunity__r.StageName)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Opportunity Stage Name</label>
    <type>Text</type>
</CustomField>