News UAT/force-app/main/default/objects/Case/fields/Ops_Error__c.field-meta.xml
<CustomField>
    <fullName>Ops_Error__c</fullName>
    <description>Ops Error for Complaint/DRS</description>
    <label>Ops Error</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>ACCOUNTS</fullName>
            </value>
            <value>
                <fullName>NON OP</fullName>
            </value>
            <value>
                <fullName>PAGINATION</fullName>
            </value>
            <value>
                <fullName>PRE-MEDIA</fullName>
            </value>
            <value>
                <fullName>PRODUCTION</fullName>
            </value>
            <value>
                <fullName>SAVED CREDIT</fullName>
            </value>
            <value>
                <fullName>N/A</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>