News UAT/force-app/main/default/objects/Case/fields/Original_Description__c.field-meta.xml
<CustomField>
    <fullName>Original_Description__c</fullName>
    <inlineHelpText>Original Case Description when Case was created.</inlineHelpText>
    <label>Original Description</label>
    <length>32000</length>
    <type>LongTextArea</type>
</CustomField>