News UAT/force-app/main/default/objects/Case/fields/Original_Queue__c.field-meta.xml
<CustomField>
    <fullName>Original_Queue__c</fullName>
    <description>The Original Queue the Case was assigned to</description>
    <label>Original Queue</label>
    <length>200</length>
    <type>Text</type>
</CustomField>