News UAT/force-app/main/default/objects/Case/fields/Original_Subject__c.field-meta.xml
<CustomField>
    <fullName>Original_Subject__c</fullName>
    <inlineHelpText>Original Case Subject when Case was created.</inlineHelpText>
    <label>Original Subject</label>
    <length>255</length>
    <type>Text</type>
</CustomField>